--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,11 +7,15 @@ skip-lint = false
 [programs.localnet]
 taskr = "Fo8rfUMhKbc3FQaVWcrVzX9f49bhYZgf1gsdSPuoNsqF"
 
+[programs.devnet]
+taskr = "Fo8rfUMhKbc3FQaVWcrVzX9f49bhYZgf1gsdSPuoNsqF"
+
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
+# cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
