--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
     "@solana/web3.js": "^1.95.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
