--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "pino-pretty": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
